<resources>
    <string name="app_name">Griter Express</string>

    <!-- Activity Title String -->
    <string name="title_activity_sign_up">Register an account</string>
    <!-- endregion -->

    <!-- region Menu Title Strings -->
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_account">Account</string>
    <string name="title_products">Products</string>
    <string name="title_sell">Sell</string>
    <string name="title_users">Users</string>
    <string name="title_suppliers">Suppliers</string>
    <string name="title_credit_card">Add Credit Card</string>
    <string name="title_payment">Checkout</string>
    <string name="title_user_details">User Details</string>
    <!-- endregion -->

    <!-- region User Strings -->
    <string name="account">Account Type</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="number">Number</string>
    <string name="address">Billing Address</string>
    <string name="gmaps">Google Map Location</string>
    <!-- endregion -->

    <!-- region Product Strings -->
    <string name="search">Search</string>
    <string name="productName">Product Name</string>
    <string name="categoryName">Category Name</string>
    <string name="supplierName">Supplier Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <!-- endregion -->

    <!-- region Order Strings -->
    <string name="buyer">Buyer</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="status">Status</string>
    <!-- endregion -->

    <!-- region Payment String -->
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="total">Total</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="change">Change</string>
    <!-- endregion -->
    
    <!-- region Credit Card Strings -->
    <string name="cardNumber">Card Number</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="csv">CSV</string>
    <!-- endregion -->

    <!-- region Action Strings -->
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_register">I don\'t have an account</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">I already have an account.</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_order">Place an Order</string>
    <string name="action_payment">Order</string>
    <string name="action_order_cancel">Cancel</string>
    <string name="action_order_processing">Processing</string>
    <string name="action_order_delivered">Delivered</string>
    <string name="action_sell">Sell</string>
    <string name="action_delete_user">Delete User</string>
    <!-- endregion -->

    <!-- region Error Strings -->
    <string name="error_login">Invalid email or password</string>
    <string name="error_sign_up">Please fill up all fields</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_password">Password is invalid</string>
    <string name="error_sell_product">Please fill up all fields</string>
    <string name="error_product_image">Please upload product picture</string>
    <string name="error_quantity">Invalid Quantity</string>
    <string name="error_payment_method">Invalid Payment Method</string>
    <string name="error_change">Invalid Change</string>
    <string name="error_credit">Invalid Credit</string>
    <string name="error_users">No user(s) found</string>
    <!-- endregion -->
</resources>
