<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_user_details"
        android:textSize="@dimen/fragment_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textColor="@color/colorError"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/text_font_size"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/txtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/text_font_size"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/txtUserNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/text_font_size"
                android:text="@string/number"/>
            <TextView
                android:id="@+id/txtUserAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/text_font_size"
                android:text="@string/address"/>

            <Button
                android:id="@+id/btnUserDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:text="@string/action_delete_user"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>