<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:scaleType="center"/>

    <ScrollView
        android:id="@+id/viewProdDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/viewProdButtons"
        android:layout_below="@id/imgProduct"
        android:paddingLeft="@dimen/fragment_padding"
        android:paddingRight="@dimen/fragment_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/product_padding">

            <TextView
                android:id="@+id/txtProdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:ellipsize="marquee"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:text="@string/productName"/>

            <TextView
                android:id="@+id/txtProdCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/categoryName"/>

            <TextView
                android:id="@+id/txtProdSupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/supplierName"/>

            <TextView
                android:id="@+id/txtProdLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/txtProdDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/txtProdPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:text="@string/price" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/viewProdButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnProdDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/btn_margin"
            android:textStyle="bold"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/action_delete"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnProdOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/btn_margin"
            android:textStyle="bold"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/action_order"/>

    </LinearLayout>

</RelativeLayout>
