<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/txtPaymentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/fragment_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/title_payment"/>

    <ScrollView
        android:id="@+id/viewPaymentDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPaymentOrder"
        android:layout_below="@+id/txtPaymentTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/order_font_size"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/product"/>

            <include
                layout="@layout/item_product"
                android:id="@+id/itemPaymentProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:layout_marginBottom="@dimen/text_vertical_margin">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/viewPaymentQuantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/txtPaymentUnit">

                    <EditText
                        android:id="@+id/txtPaymentQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        android:inputType="numberDecimal"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txtPaymentUnit"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/txtPaymentTotal"
                    android:textSize="18sp"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/unit"/>

                <TextView
                    android:id="@+id/txtPaymentTotal"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    android:text="@string/total"/>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_vertical_margin"
                    android:hint="@string/paymentMethod"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPaymentChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edit_vertical_margin"
                    android:hint="@string/change"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <include
                layout="@layout/fragment_credit_card"
                android:id="@+id/formPaymentCreditCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnPaymentOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/btn_margin"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="@dimen/btn_font_size"
        android:text="@string/action_payment"/>


</RelativeLayout>